Changed font sizes and fixed lma page on mobile

--- a/design.css
+++ b/design.css
@@ -63,6 +63,10 @@ h3.date {
 	font-style: italic;
 }
 
+.blog p {
+	font-size: 1.3rem;
+}
+
 .blog img {
 	display: block;
 	margin: 0 auto;
@@ -78,6 +82,7 @@ h3.date {
 	border-left: 0.5rem solid white;
 	padding-left: 1rem;
 	margin-left: 0;
+	font-size: 1.5rem;
 }
 
 .blog blockquote:before,
@@ -97,6 +102,7 @@ code {
 	background-color: #ffffff0d;
 	border-radius: 7px;
 	padding: 3px;
+	font-size: 1.3rem;
 }
 
 a {
@@ -133,7 +139,7 @@ a:active {
 	cursor: pointer;
 }
 
-.item-title {
+.item h2 {
 	margin: 0;
 
 	position: absolute;
@@ -149,7 +155,7 @@ a:active {
 	position: relative;
 }
 
-.item-img {
+.item img {
 	transition: all 0.2s;
 
 	width: 100%;
